# TeernOS

./: .gdbinit  .gitignore  .gitmodules  Makefile  fstime
c_linker/: Makefile  a.out  fstime.c  test.c  ttst  ttst1.dis
c_linker/cross/: a.out  crt.S  main.c  user.ld
c_linker/sysroot/lib/: libatomic.la  libatomic.so.1.2.0  libgcc_s.so.1  libgomp.la  libgomp.so.1.0.0  libstdc++.la  libstdc++.so.6.0.30  libstdc++.so.6.0.30-gdb.py  libstdc++fs.la  libsupc++.la
c_linker/unixbench/: syscall.c
codes/: .gitignore
codes/dependency/riscv/: asm.S
codes/dependency/shared/: Cargo.toml
codes/dependency/shared/src/: address.rs  config.rs  console.rs  context.rs  flags.rs  lib.rs  monitor.rs  nk_gate.S  nkapi.rs
codes/nk/: Cargo.toml  Makefile
codes/nk/src/: config.rs  entry.asm  linker-qemu.ld  linker.ld  main.rs  nk_gate.S
codes/os/: Cargo.toml  Makefile
codes/os/src/: config.rs  console.rs  entry.asm  heap_allocator.rs  lang_items.rs  linker-k210.ld  linker-qemu.ld  linker.ld  main.rs  monitor.rs  nkapi.rs  sbi.rs  statics.rs  timer.rs  utils.rs
codes/simple_fat32/src/: block_cache.rs  fat32_manager.rs  lib.rs  vfs.rs
codes/user/: Cargo.toml  Makefile
fs_tool/: Makefile
fs_tool/content/: cat  cmdline_args  exec_test  exit  fantastic_text  filetest_simple  forktest  forktest2  forktest_simple  forktree  hello_world  initproc  libuser_lib.rlib  ls  matrix  memaccess  pipe_large_test  pipetest  run_pipe_test  sleep  sleep_simple  stack_overflow  syscalltest  ttst  user_shell  usertests  waitpid  yield
k210/: Makefile
opensbi-0.4/: Makefile
(+253 files in other folders)
