[package]
name = "shared"
version = "0.1.0"
authors = ["JADDYK <12012211@mail.sustech.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
riscv = { path = "../riscv", features = ["inline-asm"] }